# 1brc_rust

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: adv.rs  basic.rs  lib.rs  main.rs  task.rs
