[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = {version = "0.8.11"}
anyhow = "1.0.82"
nohash-hasher = "0.2.0"

[dev-dependencies]
criterion = { version = "0.3"}

[profile.release]
lto = true
strip = true
panic = "abort"

[[bench]]
name = "bench"
harness = false
